--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.6",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "ng-pick-datetime": "^7.0.0",
     "rxjs": "~7.8.0",
