--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^18.2.6",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "drawflow": "^0.0.60",
     "express": "^4.18.2",
     "ng-pick-datetime": "^7.0.0",
     "rxjs": "~7.8.0",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "^18.2.6",
     "@angular/cli": "^18.2.6",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/drawflow": "^0.0.12",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
