--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.11.3",
     "drawflow": "^0.0.60",
     "express": "^4.18.2",
+    "ng-multiselect-dropdown": "^1.0.0",
     "ng-pick-datetime": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
